// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Transactions > renders the correct amount of Transactions, as the limit supplied 1`] = `
<article
  class="transactions svelte-13w6rnl"
>
  <header
    class="transactions__header svelte-13w6rnl"
  >
    <h3
      class="h4"
    >
      Transactions
    </h3>
     
    <a
      aria-disabled="false"
      class="dusk-anchor dusk-anchor-button dusk-anchor-button--variant--primary dusk-anchor-button--size--default transactions__footer-button"
      href="/some-base-path/dashboard/transactions"
    >
      <span
        class="dusk-anchor-button__text"
      >
        All transactions
      </span>
      
    </a>
  </header>
   
  <div
    class="dusk-suspense transactions-list__container"
  >
    <dl
      class="transactions-list"
    >
      <dt
        class="transactions-list__term"
      >
        Hash
      </dt>
      <dd
        class="transactions-list__datum transactions-list__datum--hash"
      >
        <samp>
          <a
            class="dusk-anchor"
            href="https://explorer.dusk.network/transactions/transaction?id=tg874534tddsghdtst54hdfh795h"
            rel="noopener noreferrer"
            target="_blank"
          >
            tg874534tddsghdtst54hdfh795h
          </a>
        </samp>
         
      </dd>
      <dt
        class="transactions-list__term"
      >
        Type
      </dt>
      <dd
        class="transactions-list__datum"
      >
        <span
          class="dusk-badge dusk-badge--variant-neutral transactions-list__badge"
        >
          STAKE
        </span>
         
      </dd>
      <dt
        class="transactions-list__term"
      >
        Block
      </dt>
      <dd
        class="transactions-list__datum"
      >
        33,460
         
      </dd>
      <dt
        class="transactions-list__term"
      >
        Amount
      </dt>
      <dd
        class="transactions-list__datum"
      >
        +27,000.00
         
        <span
          class="transactions-list__ticker"
        >
          Dusk
        </span>
         
      </dd>
      <dt
        class="transactions-list__term"
      >
        Fee
      </dt>
      <dd
        class="transactions-list__datum"
      >
        1,876.00
         
        <span
          class="transactions-list__ticker"
        >
          Dusk
        </span>
         
      </dd>
    </dl>
    <dl
      class="transactions-list"
    >
      <dt
        class="transactions-list__term"
      >
        Hash
      </dt>
      <dd
        class="transactions-list__datum transactions-list__datum--hash"
      >
        <samp>
          <a
            class="dusk-anchor"
            href="https://explorer.dusk.network/transactions/transaction?id=tg874534tddsghdtst54hdfh794h"
            rel="noopener noreferrer"
            target="_blank"
          >
            tg874534tddsghdtst54hdfh794h
          </a>
        </samp>
         
      </dd>
      <dt
        class="transactions-list__term"
      >
        Type
      </dt>
      <dd
        class="transactions-list__datum"
      >
        <span
          class="dusk-badge dusk-badge--variant-neutral transactions-list__badge"
        >
          TRANSFER
        </span>
         
      </dd>
      <dt
        class="transactions-list__term"
      >
        Block
      </dt>
      <dd
        class="transactions-list__datum"
      >
        33,459
         
      </dd>
      <dt
        class="transactions-list__term"
      >
        Amount
      </dt>
      <dd
        class="transactions-list__datum"
      >
        -25,000.00
         
        <span
          class="transactions-list__ticker"
        >
          Dusk
        </span>
         
      </dd>
    </dl>
    <dl
      class="transactions-list"
    >
      <dt
        class="transactions-list__term"
      >
        Hash
      </dt>
      <dd
        class="transactions-list__datum transactions-list__datum--hash"
      >
        <samp>
          <a
            class="dusk-anchor"
            href="https://explorer.dusk.network/transactions/transaction?id=tg874534tddsghdtst54hdfh793h"
            rel="noopener noreferrer"
            target="_blank"
          >
            tg874534tddsghdtst54hdfh793h
          </a>
        </samp>
         
      </dd>
      <dt
        class="transactions-list__term"
      >
        Type
      </dt>
      <dd
        class="transactions-list__datum"
      >
        <span
          class="dusk-badge dusk-badge--variant-neutral transactions-list__badge"
        >
          TRANSFER
        </span>
         
      </dd>
      <dt
        class="transactions-list__term"
      >
        Block
      </dt>
      <dd
        class="transactions-list__datum"
      >
        33,458
         
      </dd>
      <dt
        class="transactions-list__term"
      >
        Amount
      </dt>
      <dd
        class="transactions-list__datum"
      >
        +25,000.00
         
        <span
          class="transactions-list__ticker"
        >
          Dusk
        </span>
         
      </dd>
    </dl>
    
    
  </div>
</article>
`;

exports[`Transactions > renders transactions correctly when items are fulfilled 1`] = `
<article
  class="transactions svelte-13w6rnl"
>
  <header
    class="transactions__header svelte-13w6rnl"
  >
    <h3
      class="h4"
    >
      Transactions
    </h3>
     
    <a
      aria-disabled="false"
      class="dusk-anchor dusk-anchor-button dusk-anchor-button--variant--primary dusk-anchor-button--size--default transactions__footer-button"
      href="/some-base-path/dashboard/transactions"
    >
      <span
        class="dusk-anchor-button__text"
      >
        All transactions
      </span>
      
    </a>
  </header>
   
  <div
    class="dusk-suspense transactions-list__container"
  >
    <dl
      class="transactions-list"
    >
      <dt
        class="transactions-list__term"
      >
        Hash
      </dt>
      <dd
        class="transactions-list__datum transactions-list__datum--hash"
      >
        <samp>
          <a
            class="dusk-anchor"
            href="https://explorer.dusk.network/transactions/transaction?id=tg874534tddsghdtst54hdfh795h"
            rel="noopener noreferrer"
            target="_blank"
          >
            tg874534tddsghdtst54hdfh795h
          </a>
        </samp>
         
      </dd>
      <dt
        class="transactions-list__term"
      >
        Type
      </dt>
      <dd
        class="transactions-list__datum"
      >
        <span
          class="dusk-badge dusk-badge--variant-neutral transactions-list__badge"
        >
          STAKE
        </span>
         
      </dd>
      <dt
        class="transactions-list__term"
      >
        Block
      </dt>
      <dd
        class="transactions-list__datum"
      >
        33,460
         
      </dd>
      <dt
        class="transactions-list__term"
      >
        Amount
      </dt>
      <dd
        class="transactions-list__datum"
      >
        +27,000.00
         
        <span
          class="transactions-list__ticker"
        >
          Dusk
        </span>
         
      </dd>
      <dt
        class="transactions-list__term"
      >
        Fee
      </dt>
      <dd
        class="transactions-list__datum"
      >
        1,876.00
         
        <span
          class="transactions-list__ticker"
        >
          Dusk
        </span>
         
      </dd>
    </dl>
    
    
  </div>
</article>
`;
